kubernetes/apps/default/crypt/securitypolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: crypt
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: crypt-base
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: crypt-ui
  oidc:
    provider:
      issuer: "https://id.${ROOT_DOMAIN}"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pocket-id
          namespace: security
          port: 443
    clientIDRef:
      group: ""
      kind: Secret
      name: crypt-secret
    clientSecret:
      group: ""
      kind: Secret
      name: crypt-secret
    cookieDomain: "crypt.${ROOT_DOMAIN}"
    redirectURL: "https://crypt.${ROOT_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
